--- a/Lonerism review/lonerism/reviewmobiletest.html
+++ b/Lonerism review/lonerism/reviewmobiletest.html
@@ -188,38 +188,63 @@
         }
 
         /* Responsive styles */
-        @media (max-width: 600px) {
-            body {
-                font-size: 0.9rem;
-            }
+		@media (max-width: 600px) {
+			body {
+				font-size: 0.9rem;
+			}
 
-            nav ul {
-                flex-direction: column;
-                align-items: center;
-            }
+			nav ul {
+				flex-direction: column;
+				align-items: center;
+			}
 
-            .content {
-                padding: 10px;
-                max-width: 95%;
-            }
+			.content {
+				padding: 10px;
+				max-width: 95%;
+			}
 
-            .quote-image img {
-                width: 100%;
-            }
+			.quote-image img {
+				width: 100%;
+			}
 
-            .audio-container {
-                flex-direction: column;
-                gap: 10px;
-            }
+			.audio-container {
+				flex-direction: column;
+				gap: 10px;
+				padding: 20px 10px; /* Add padding to avoid overlap with buttons */
+			}
 
-            .tooltip-box {
-                width: 80%;
-            }
+			.tooltip-box {
+				width: 80%;
+				max-width: 90%; /* Ensures it doesn't overflow */
+				left: 10px; /* Prevent tooltip from going outside the screen */
+			}
 
-            .tooltip {
-                font-size: 1rem;
-            }
-        }
+			.tooltip {
+				font-size: 1rem;
+			}
+
+			.navigation-buttons {
+				margin-top: 20px;
+				display: flex;
+				flex-direction: column; /* Stack the buttons for mobile */
+				gap: 10px;
+			}
+
+			.audio-info {
+				flex-direction: column;
+				gap: 10px;
+				align-items: center;
+			}
+
+			.audio-info img {
+				width: 60px;
+				height: 60px;
+			}
+
+			.audio-container audio {
+				width: 100%;
+			}
+		}
     </style>
 </head>
 <body>
