--- a/Lonerism review/lonerism/reviewmobiletest.html
+++ b/Lonerism review/lonerism/reviewmobiletest.html
@@ -188,63 +188,68 @@
         }
 
         /* Responsive styles */
-		@media (max-width: 600px) {
-			body {
-				font-size: 0.9rem;
-			}
+			@media (max-width: 600px) {
+				body {
+					font-size: 0.9rem;
+					padding-bottom: 80px; /* Ensures space for audio player */
+				}
 
-			nav ul {
-				flex-direction: column;
-				align-items: center;
-			}
+				.audio-container {
+					position: fixed;
+					bottom: 0;
+					left: 0;
+					width: 100%;
+					background-color: #f3f3f3;
+					padding: 10px;
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+					gap: 10px;
+					box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+				}
 
-			.content {
-				padding: 10px;
-				max-width: 95%;
-			}
+				.audio-info {
+					display: flex;
+					align-items: center;
+					gap: 10px;
+					flex: 1;
+					min-width: 0;
+				}
 
-			.quote-image img {
-				width: 100%;
-			}
+				.audio-info img {
+					width: 50px;
+					height: 50px;
+					flex-shrink: 0;
+				}
 
-			.audio-container {
-				flex-direction: column;
-				gap: 10px;
-				padding: 20px 10px; /* Add padding to avoid overlap with buttons */
-			}
+				.audio-container audio {
+					flex: 2;
+					width: 100%;
+				}
 
-			.tooltip-box {
-				width: 80%;
-				max-width: 90%; /* Ensures it doesn't overflow */
-				left: 10px; /* Prevent tooltip from going outside the screen */
-			}
+				.navigation-buttons {
+					margin-bottom: 100px; /* Pushes it above audio player */
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+				}
 
-			.tooltip {
-				font-size: 1rem;
+				.tooltip-box {
+					position: absolute;
+					background-color: purple;
+					color: white;
+					padding: 5px 10px;
+					border-radius: 5px;
+					font-size: 14px;
+					width: auto; /* Allows it to adjust */
+					max-width: 80%; /* Prevents cut-off */
+					word-wrap: break-word; /* Breaks long words */
+					z-index: 1000;
+					left: 50%;
+					transform: translateX(-50%); /* Centers it */
+					bottom: 35px;
+				}
 			}
-
-			.navigation-buttons {
-				margin-top: 20px;
-				display: flex;
-				flex-direction: column; /* Stack the buttons for mobile */
-				gap: 10px;
-			}
-
-			.audio-info {
-				flex-direction: column;
-				gap: 10px;
-				align-items: center;
-			}
-
-			.audio-info img {
-				width: 60px;
-				height: 60px;
-			}
-
-			.audio-container audio {
-				width: 100%;
-			}
-		}
     </style>
 </head>
 <body>
