--- a/Lonerism Review/lonerism/page13.html
+++ b/Lonerism Review/lonerism/page13.html
@@ -306,7 +306,7 @@
 
 	<p>A rövid kis gitárszóló részen a gitáron hall reverb, kórus, tape echo és <a class="tooltip" href="https://en.wikipedia.org/wiki/Uni-Vibe" target="_blank" data-image="../images/uni-vibe.jpg">Uni-Vibe<img src="../images/uni-vibe.jpg"></a> van.</p>
 
-	<p>A dalban sem dob, sem basszus nincs.</p>
+	<p>A dalban nincs dob, a basszus teljesen a szintetizátort követi.</p>
 
 		
         
